@@ -97,6 +97,8 @@ import org.geoserver.platform.resource.Resources;
 import org.geoserver.wms.DefaultWebMapService;
 import org.geoserver.wms.GetMapRequest;
 import org.geoserver.wms.MapLayerInfo;
+import org.geoserver.wms.WMS;
+import org.geoserver.wms.WMSInfo;
 import org.geoserver.wms.WMSMapContent;
 import org.geoserver.wms.WebMap;
 import org.geoserver.wms.WebMapService;
@@ -129,6 +131,7 @@ import org.geowebcache.conveyor.ConveyorTile;
 import org.geowebcache.diskquota.DiskQuotaMonitor;
 import org.geowebcache.diskquota.QuotaStore;
 import org.geowebcache.diskquota.jdbc.JDBCConfiguration;
+import org.geowebcache.filter.parameters.RegexParameterFilter;
 import org.geowebcache.grid.BoundingBox;
 import org.geowebcache.grid.GridSet;
 import org.geowebcache.grid.GridSetBroker;
@@ -206,6 +209,10 @@ public class GWCTest {
     private JDBCConfigurationStorage jdbcStorage;
 
     private GWCSynchEnv synchEnv;
+
+    private WMSInfo wmsInfo;
+
+    private WMS wms;
 
     static Resource tmpDir() throws IOException {
         Resource root = Files.asResource(new File(System.getProperty("java.io.tmpdir", ".")));
@@ -367,6 +374,15 @@ public class GWCTest {
                 .anyTimes();
         expect(appContext.getBean("resourceLoader")).andReturn(loader).anyTimes();
         expect(appContext.isSingleton("resourceLoader")).andReturn(true).anyTimes();
+
+        wmsInfo = mock(WMSInfo.class);
+        wms = mock(WMS.class);
+        when(wms.getServiceInfo()).thenReturn(wmsInfo);
+        expect(appContext.getBeanNamesForType(WMS.class))
+                .andReturn(new String[] {"wms"})
+                .anyTimes();
+        expect(appContext.getBean("wms")).andReturn(wms).anyTimes();
+        expect(appContext.isSingleton("wms")).andReturn(true).anyTimes();
 
         replay(appContext);
 
@@ -1623,15 +1639,38 @@ public class GWCTest {
     }
 
     @Test
-    public void testSplitCoalescedRequestRejectsPositionalFilterParams() throws Exception {
+    public void testSplitReslicesCqlFilterPerMember() throws Exception {
         defaults.setMultiLayerCachingEnabled(true);
 
-        GetMapRequest request = coalescedRequest(new Envelope(0, 1, 0, 1), layer, layer);
-        request.getRawKvp().put("CQL_FILTER", "include;include");
+        LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
+        LayerInfo layer2 = mockLayer("member2", new String[] {}, PublishedType.RASTER);
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
+        GeoServerTileLayer tl2 = mockTileLayer(new MapLayerInfo(layer2).getName(), List.of("EPSG:4326"));
+
+        // anchored to the WHOLE value: only matches if this member sees just its own clause, not
+        // the combined multi-layer CQL_FILTER string
+        RegexParameterFilter filter1 = new RegexParameterFilter();
+        filter1.setKey("CQL_FILTER");
+        filter1.setRegex("^NAME\\s*=\\s*'a'$");
+        when(tl1.getParameterFilters()).thenReturn(List.of(filter1));
+
+        RegexParameterFilter filter2 = new RegexParameterFilter();
+        filter2.setKey("CQL_FILTER");
+        filter2.setRegex("^NAME\\s*=\\s*'b'$");
+        when(tl2.getParameterFilters()).thenReturn(List.of(filter2));
+
+        BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
+        Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
+        GetMapRequest request = coalescedRequest(bbox, layer1, layer2);
+        request.setCQLFilter(List.of(CQL.toFilter("NAME = 'a'"), CQL.toFilter("NAME = 'b'")));
+        request.getRawKvp().put("CQL_FILTER", "NAME = 'a';NAME = 'b'");
         StringBuilder mismatch = new StringBuilder();
 
-        assertNull(mediator.splitCoalescedRequest(request, mismatch));
-        assertTrue(mismatch.toString().contains("CQL_FILTER not yet supported"));
+        List<GWC.TileLayerMember> members = mediator.splitCoalescedRequest(request, mismatch);
+
+        assertEquals(0, mismatch.length());
+        assertNotNull(members);
+        assertEquals(2, members.size());
     }
 
     @Test
@@ -1640,8 +1679,8 @@ public class GWCTest {
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
         LayerInfo layer2 = mockLayer("member2", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
-        GeoServerTileLayer tl2 = mockTileLayer(new MapLayerInfo(layer2).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
+        GeoServerTileLayer tl2 = mockTileLayer(new MapLayerInfo(layer2).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1665,8 +1704,8 @@ public class GWCTest {
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.VECTOR);
         LayerInfo layer2 = mockLayer("member2", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
-        mockTileLayer(new MapLayerInfo(layer2).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
+        mockTileLayer(new MapLayerInfo(layer2).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1686,7 +1725,7 @@ public class GWCTest {
         defaults.setMultiLayerCachingEnabled(true);
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1711,8 +1750,8 @@ public class GWCTest {
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.VECTOR);
         LayerInfo layer2 = mockLayer("member2", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
-        mockTileLayer(new MapLayerInfo(layer2).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
+        mockTileLayer(new MapLayerInfo(layer2).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1735,7 +1774,7 @@ public class GWCTest {
         defaults.setMultiLayerCachingEnabled(true);
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1763,7 +1802,7 @@ public class GWCTest {
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
         LayerInfo notCached = mockLayer("notCached", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1776,14 +1815,47 @@ public class GWCTest {
     }
 
     @Test
+    public void testSplitRejectsOnDifferentGridsets() throws Exception {
+        defaults.setMultiLayerCachingEnabled(true);
+
+        LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
+        LayerInfo layer2 = mockLayer("member2", new String[] {}, PublishedType.RASTER);
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
+
+        // same grid definition as EPSG:4326 (so the exact same bbox/tile matches), but registered
+        // under a different name: member2 resolves to a distinct gridSetId for that identical tile
+        GridSet renamedGridSet =
+                namedGridsetCopy("MY4326", gridSetBroker.getDefaults().worldEpsg4326());
+        GridSubset renamedSubset = GridSubsetFactory.createGridSubSet(renamedGridSet);
+        String name2 = new MapLayerInfo(layer2).getName();
+        GeoServerTileLayer tl2 = mock(GeoServerTileLayer.class);
+        when(tld.layerExists(eq(name2))).thenReturn(true);
+        when(tld.getTileLayer(eq(name2))).thenReturn(tl2);
+        when(tl2.getName()).thenReturn(name2);
+        when(tl2.isEnabled()).thenReturn(true);
+        when(tl2.getMimeTypes()).thenReturn(ImmutableList.of(MimeType.createFromFormat("image/png")));
+        when(tl2.getGridSubset(eq("MY4326"))).thenReturn(renamedSubset);
+        when(tl2.getGridSubsetsForSRS(eq(renamedGridSet.getSrs()))).thenReturn(ImmutableList.of(renamedSubset));
+
+        BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
+        Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
+        GetMapRequest request = coalescedRequest(bbox, layer1, layer2);
+        StringBuilder mismatch = new StringBuilder();
+
+        assertNull(mediator.splitCoalescedRequest(request, mismatch));
+        assertTrue(mismatch.toString().contains(name2));
+        assertTrue(mismatch.toString().contains("different gridset/tile"));
+    }
+
+    @Test
     public void testSplitVerifiesAccessPerMember() throws Exception {
         defaults.setMultiLayerCachingEnabled(true);
         defaults.setSecurityEnabled(true);
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
         LayerInfo layer2 = mockLayer("member2", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
-        mockTileLayer(new MapLayerInfo(layer2).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
+        mockTileLayer(new MapLayerInfo(layer2).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1808,7 +1880,7 @@ public class GWCTest {
         // securityEnabled left at its default: false
 
         LayerInfo layer1 = mockLayer("member1", new String[] {}, PublishedType.RASTER);
-        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), Arrays.asList("EPSG:4326"));
+        GeoServerTileLayer tl1 = mockTileLayer(new MapLayerInfo(layer1).getName(), List.of("EPSG:4326"));
 
         BoundingBox bounds = tl1.getGridSubset("EPSG:4326").boundsFromIndex(new long[] {0, 0, 0});
         Envelope bbox = new Envelope(bounds.getMinX(), bounds.getMaxX(), bounds.getMinY(), bounds.getMaxY());
@@ -1819,6 +1891,55 @@ public class GWCTest {
 
         assertNotNull(members);
         verify(mediator, never()).verifyAccessLayer(any(), any());
+    }
+
+    @Test
+    public void testComputeRenderingDeadlineUnlimitedWhenNotConfigured() {
+        when(wmsInfo.getMaxRenderingTime()).thenReturn(0);
+
+        assertEquals(-1L, mediator.computeRenderingDeadline());
+    }
+
+    @Test
+    public void testComputeRenderingDeadlineAddsConfiguredSecondsToNow() {
+        when(wmsInfo.getMaxRenderingTime()).thenReturn(5);
+
+        long before = System.currentTimeMillis();
+        long deadline = mediator.computeRenderingDeadline();
+        long after = System.currentTimeMillis();
+
+        assertTrue(deadline >= before + 5000);
+        assertTrue(deadline <= after + 5000);
+    }
+
+    @Test
+    public void testExceedsMaxRequestMemoryNeverWhenUnlimited() {
+        when(wmsInfo.getMaxRequestMemory()).thenReturn(0);
+        GetMapRequest request = new GetMapRequest();
+        request.setWidth(256);
+        request.setHeight(256);
+
+        assertFalse(mediator.exceedsMaxRequestMemory(10, request));
+    }
+
+    @Test
+    public void testExceedsMaxRequestMemoryOverBudget() {
+        when(wmsInfo.getMaxRequestMemory()).thenReturn(1); // 1 KB, way under a 256x256 ARGB tile stack
+        GetMapRequest request = new GetMapRequest();
+        request.setWidth(256);
+        request.setHeight(256);
+
+        assertTrue(mediator.exceedsMaxRequestMemory(2, request));
+    }
+
+    @Test
+    public void testExceedsMaxRequestMemoryWithinBudget() {
+        when(wmsInfo.getMaxRequestMemory()).thenReturn(10_000); // 10 MB, comfortably over a 3-member 256x256 stack
+        GetMapRequest request = new GetMapRequest();
+        request.setWidth(256);
+        request.setHeight(256);
+
+        assertFalse(mediator.exceedsMaxRequestMemory(2, request));
     }
 
     /** A tiled, transparent-PNG multi-layer {@code GetMap} request over the given {@code LAYERS} members. */
